Fri Aug 14 19:57:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/curses/curses.c ({curses,window}_addstr),
	  ext/openssl/ossl_x509store.c (ossl_x509store_add_{file,path}):
	  replaced deprecated funtion.

Fri Aug 14 14:03:46 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* configure.in: only check pthread.h in case of --enable-pthread
	  backport from trunk. [ruby-talk:343878] [ruby-core:23577]

Thu Aug 13 16:20:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, Makefile.in (MAKEDIRS): used MKDIR_P instead of
	  as_mkdir_p.  [ruby-dev:39063]

Wed Aug 12 00:04:33 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/digest/sha2/sha2.h: need to include defs.h instead of inttypes.h
	  because VC6 doesn't have the latter.

	* ext/digest/sha2/extconf.rb: rollback r24441.

Tue Aug 11 21:42:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_divmod): fixed rdoc.  [ruby-core:24862]

Tue Aug 11 13:59:25 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_sysopen): workaround for MSVCRT's bug.
	  [ruby-core:24838]

Sun Aug  9 21:14:03 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb (search_tclConfig): last change isn't enough.
	  fixed it.

	* ext/tk/tcltklib.c (Init_tcltklib): avoid warning when disable-pthread

Fri Aug  7 23:36:07 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): need select for WAIT_SELECT, even if
	  already timeout.  [ruby-dev:38971]
	  (WAIT_DONE): defined for mark threads which can be runnable.

Fri Aug  7 20:18:21 2009  Tanaka Akira  <akr@fsij.org>

	* ext/digest/sha2/sha2.h: include inttypes.h for uint32_t, etc.

	* ext/digest/sha2/extconf.rb: check inttypes.h.

Fri Aug  7 02:03:48 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.[ch]: Update to 1.0 RELEASE which fixes an
	  off-by-one bug in SHA-256 hashing.  Reduce differences from
	  the original while at it. [Bug #1799]

Fri Aug  7 02:00:06 2009  Akinori MUSHA  <knu@iDaemons.org>
