@@ -1,3 +1,7 @@
+Fri Aug 21 00:25:07 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* parse.y (arg_value): fix to pass "make test".
+
 Fri Aug 14 19:57:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/curses/curses.c ({curses,window}_addstr),
